<resources>
    <string name="app_name">MoevaStream-Mobile-App</string>
    <string name="film_name">Movies Title</string>
    <string name="film_overview">Overview</string>
    <string name="film_storyline">Storyline</string>
    <string name="film_genre">Movies Title</string>
    <string name="film_rating">Overview</string>
    <string name="film_runtime">Storyline</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="overview">Overview</string>
    <string name="storyline">Storyline</string>
    <string name="genre">Genre</string>
    <string name="runtime">Runtime</string>
    <string name="rating">Rating</string>
    <string name="share">Bagikan Trailer</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string-array name="data_name">
        <item>Transformers: Dark of the Moon</item>
        <item>Transformers: Revenge of the Fallen</item>
        <item>Pacific Rim</item>
        <item>Pacific Rim: Uprising</item>
        <item>Avengers: Infinity War</item>
        <item>Thor: The Dark World</item>
        <item>Godzilla vs. Kong</item>
        <item>Godzilla: King of the Monsters</item>
        <item>Avatar: The Way of Water</item>
        <item>Interstellar</item>
        <item>Sicario</item>
        <item>Sicario: Day of the Soldado</item>
    </string-array>
    <string-array name="data_overview">
        <item>The Autobots learn of a Cybertronian spacecraft hidden on the moon, and race against the Decepticons to reach it and to learn its secrets.</item>
        <item>Sam Witwicky leaves the Autobots behind for a normal life. But when his mind is filled with cryptic symbols, the Decepticons target him and he is dragged back into the Transformers war.</item>
        <item>As a war between humankind and monstrous sea creatures wages on, a former pilot and a trainee are paired up to drive a seemingly obsolete special weapon in a desperate effort to save the world from the apocalypse.</item>
        <item>Jake Pentecost, son of Stacker Pentecost, reunites with Mako Mori to lead a new generation of Jaeger pilots, including rival Lambert and 15 year old hacker Amara, against a new Kaiju threat.</item>
        <item>The Avengers and their allies must be willing to sacrifice all in an attempt to defeat the powerful Thanos before his blitz of devastation and ruin puts an end to the universe.</item>
        <item>When the Dark Elves attempt to plunge the universe into darkness, Thor must embark on a perilous and personal journey that will reunite him with doctor Jane Foster.</item>
        <item>The epic next chapter in the cinematic Monsterverse pits two of the greatest icons in motion picture history against each other the fearsome Godzilla and the mighty Kong—with humanity caught in the balance.</item>
        <item>The crypto-zoological agency Monarch faces off against a battery of god-sized monsters, including the mighty Godzilla, who collides with Mothra, Rodan, and his ultimate nemesis, the three-headed King Ghidorah.</item>
        <item>Jake Sully lives with his newfound family formed on the extrasolar moon Pandora. Once a familiar threat returns to finish what was previously started, Jake must work with Neytiri and the army of the Navi race to protect their home.</item>
        <item>When Earth becomes uninhabitable in the future, a farmer and ex-NASA pilot, Joseph Cooper, is tasked to pilot a spacecraft, along with a team of researchers, to find a new planet for humans.</item>
        <item>An idealistic FBI agent is enlisted by a government task force to aid in the escalating war against drugs at the border area between the U.S. and Mexico.</item>
        <item>The drug war on the U.S.-Mexico border has escalated as the cartels have begun trafficking terrorists across the US border. To fight the war, federal agent Matt Graver re-teams with the mercurial Alejandro.</item>
    </string-array>
</resources>